--- a/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
@@ -11,13 +11,10 @@
     <link rel="stylesheet" th:href="@{/assets/css/admin_css.css}" />
     <link th:href="@{/assets/css/mycss.css}" rel="stylesheet" />
     <link th:href="@{/assets/font/themify-icons/themify-icons.css}" rel="stylesheet" />
-    <title>CONVERSE - [[${title}]]</title>
+    <title>CONVERSE - ADMIN</title>
 </head>
 
 <body ng-app="admin-app">
-	
-
-        
            <!-- top navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
