[ECLIPSE] sửa form bình luận nhưng đang lỗi

--- a/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
@@ -193,7 +193,7 @@
                     
                     <!-- Quản lý bình luận bắt đầu  -->
                     <li>
-                        <a th:href="@{/admin_binhluan}" class="nav-link px-3">
+                        <a th:href="#!admin_binhluan" class="nav-link px-3">
                             <span class="me-2"><i class="bi bi-book-fill"></i></span>
                             <span th:text="#{nav.qlbinhluan}">Quản lý bình luận</span>
                         </a>
@@ -267,6 +267,7 @@
 	<script src="/assets/js/variant-ctrl.js"></script>
 	<script src="/assets/js/color-ctrl.js"></script>
 	<script src="/assets/js/size-ctrl.js"></script>
+	<script src="/assets/js/comment-ctrl.js"></script>
 </body>
 
 </html>
