--- a/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
@@ -194,7 +194,7 @@
                     
                     <!-- Quản lý bình luận bắt đầu  -->
                     <li>
-                        <a th:href="#!admin_binhluan" class="nav-link px-3">
+                        <a href="#!admin_binhluan" class="nav-link px-3">
                             <span class="me-2"><i class="bi bi-book-fill"></i></span>
                             <span th:text="#{nav.qlbinhluan}">Quản lý bình luận</span>
                         </a>
