[HTML] update binh luan

--- a/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_BinhLuan.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_BinhLuan.html
@@ -79,7 +79,7 @@
                                             <label class="form-label fs-17">Hiển thị:</label>
                                             <label>
                                             <input type="radio" ng-model="form.hidden" ng-value="true" name="status"> Công khai</label>
-                                            <label><input type="radio" ng-model="form.hidden" ng-value="false" name="status" checked> Ẩn</label>                                   
+                                            <label><input type="radio" ng-model="form.hidden" ng-value="false" name="status"> Ẩn</label>                                   
                                         </div>
                                     </div>
                                 </div>
