[ECLIPSE] cap nhat lai model cua Ni

--- a/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_BinhLuan.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_BinhLuan.html
@@ -26,20 +26,21 @@
                             Form Bình Luận
                         </div>
                         <div class="card-body">
-                            <form>
+                            <form action="">
                                 <div class="row">
-                                    <div class="mb-3 col-md-12">
-                                        <input type="hidden" class="form-control">
+                                    <div class="mb-3 col-md-4">
+                                    <label class="form-label fs-17">Mã bình luận</label>
+                                        <input ng-model="form.commentID" type="text" class="form-control" readonly="true">
                                     </div>
-                                    <div class="mb-3 col-md-12">
+                                    <div class="mb-3 col-md-4">
                                         <label for="tensanpham" class="form-label fs-17">Tên sản phẩm:</label>
-                                        <select ng-model="form.products.productName" class="form-control">
+                                        <select ng-model="form.products.productName" class="form-select">
                                         	<option ng-repeat="p in products" ng-value="p.productID">{{p.productName}}</option>
                                         </select>
                                     </div>
-                                    <div class="mb-3 col-md-12">
+                                    <div class="mb-3 col-md-4">
                                         <label for="tenkhachhang" class="form-label fs-17">Tên khách hàng:</label>
-                                        <select ng-model="form.customers.customerName" class="form-control">
+                                        <select ng-model="form.customers.customerName" class="form-select">
                                         	<option ng-repeat="cus in customers" ng-value="cus.customerId">{{cus.customerName}}</option>
                                         </select>
                                     </div>
@@ -47,12 +48,12 @@
                                         <label for="noidung" class="form-label fs-17">Nội dung bình luận:</label>
                                         <textarea id="noidung" ng-model="form.comment" rows="3" class="form-control"></textarea>
                                     </div>
-                                    <div class="mb-3 col-md-12">
+                                    <div class="mb-3 col-md-4">
                                         <label for="ngaybl" class="form-label fs-17">Ngày bình luận:</label>
                                         <input type="date" ng-model="form.createDate" class="form-control" id="ngaybl">
                                     </div>
-                                    <div class="row">
-                                        <div class="mb-3 col-md-12">
+                                    <div class="row col-md-4">
+                                        <div class="mb-3 col-md-4">
                                             <label class="form-label fs-17">Trạng thái:</label>
                                             <label>
                                             <input type="radio" ng-model="form.status" ng-value="true" name="status"> Bật</label>
@@ -60,33 +61,33 @@
                                             
                                         </div>
                                     </div>
-                                    <div class="mb-3 col-md-12">
+                                    <div class="mb-3 col-md-4">
                                         <label for="nv" class="form-label fs-17">Nhân viên:</label>
-                                        <select ng-model="form.employees.employeeName" class="form-control">
+                                        <select ng-model="form.employees.employeeName" class="form-select">
                                         	<option ng-repeat="e in employees" ng-value="e.employeeId">{{e.employeeName}}</option>
                                         </select>
-<!--                                     </div> -->
+                                    </div>
                                     <div class="mb-3 col-md-12">
                                         <label for="traloi" class="form-label fs-17">Trả lời:</label>
                                         <textarea id="traloi" ng-model="form.adminReply" rows="3" class="form-control"></textarea>
                                     </div>
-                                    <div class="mb-3 col-md-12">
+                                    <div class="mb-3 col-md-4">
                                         <label for="ngaytrl" class="form-label fs-17">Ngày trả lời:</label>
                                         <input type="date" ng-model="form.dateReply" class="form-control" id="ngaytrl">
                                     </div>
-                                    <div class="row">
-                                        <div class="mb-3 col-md-12">
+                                    <div class="row col-md-4">
+                                        <div class="mb-3 col-md-4">
                                             <label class="form-label fs-17">Hiển thị:</label>
                                             <label>
-                                            <input type="radio" ng-model="form.hidden" ng-value="true" name="status"> Công khai</label>
-                                            <label><input type="radio" ng-model="form.hidden" ng-value="false" name="status"> Ẩn</label>                                   
+                                            <input type="radio" ng-model="form.hidden" ng-value="true" name="hidden"> Công khai</label>
+                                            <label><input type="radio" ng-model="form.hidden" ng-value="false" name="hidden"> Ẩn</label>                                   
                                         </div>
                                     </div>
                                 </div>
-                            </form>
-                            <button ng-click="update()" type="button" class="btn btn-success"><i class="bi bi-card-list"></i> Sửa</button>
+                                <button ng-click="update()" type="button" class="btn btn-success"><i class="bi bi-card-list"></i> Sửa</button>
                                 <button ng-click="delete(form)" type="button" class="btn btn-danger"><i class="bi bi-trash"></i> Xóa</button>
                                 <button ng-click="reset()" type="button" class="btn btn-info"><i class="bi bi-arrow-clockwise"></i> Làm mới</button>
+                            </form>
                         </div>
 
                     </div>
@@ -119,23 +120,20 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr ng-repeat="cmt in pager.comments">
-                                        <td>{{cmt.commentID}}</td>
-                                        <td>{{cmt.products.productName}}</td>
-                                        <td>{{cmt.customers.customerName}}</td>
-                                        <td>{{cmt.comment}}</td>
-                                        <td>{{cmt.createDate | date:'dd-MM-yyyy'}}</td>
-                                        <td th:if="${cmt.employees != null}">{{cmt.employees.employeeName}}</td>
-                                        <td th:unless="${cmt.employees != null}">
-                                        <span th:text="'Chưa được nhân viên trả lời'"></span>
-                                        </td>
-                                        <td>{{cmt.adminReply}}</td>
-                                        <td>{{cmt.dateReply}}</td>
-                                        <td>{{cmt.status?'Đã duyệt':'Chờ duyệt'}}</td>
-                                        <td>{{cmt.hidden?'Công khai':'Ẩn'}}</td>
+                                    <tr ng-repeat="commentitem in pager.commentitems">
+                                        <td>{{commentitem.commentID}}</td>
+                                        <td>{{commentitem.products.productName}}</td>
+                                        <td>{{commentitem.customers.customerName}}</td>
+                                        <td>{{commentitem.comment}}</td>
+                                        <td>{{commentitem.createDate | date:'dd-MM-yyyy'}}</td>
+                                        <td>{{commentitem.employees.employeeName}}</td>
+                                        <td>{{commentitem.adminReply}}</td>
+                                        <td>{{commentitem.dateReply}}</td>
+                                        <td>{{commentitem.status?'Đã duyệt':'Chờ duyệt'}}</td>
+                                        <td>{{commentitem.hidden?'Công khai':'Ẩn'}}</td>
                                         <td>
-                                            <button ng-click="edit(comment)" class="btn btn-warning">Chọn</button>
-                                            <button ng-click="delete(comment)" class="btn btn-danger">Xóa</button>
+                                            <button ng-click="edit(commentitem)" type="button" class="btn btn-warning">Chọn</button>
+                                            <button ng-click="delete(commentitem)" type="button" class="btn btn-danger">Xóa</button>
                                         </td>
                                     </tr>
                                 </tbody>
