--- a/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
@@ -76,7 +76,7 @@
 
                     <!-- Quản lý nhà cung cấp bắt đầu  -->
                     <li>
-                        <a th:href="@{/admin_ncc}" class="nav-link px-3">
+                        <a href="#!admin_NhaCungCap" class="nav-link px-3">
                             <span class="me-2"><i class="bi bi-book-fill"></i></span>
                             <span th:text="#{nav.qlnhacungcap}">Quản lý nhà cung cấp</span>
                         </a>
@@ -98,7 +98,7 @@
                         <div class="collapse" id="khuyenmai">
                             <ul class="navbar-nav ps-3">
                                 <li>
-                                    <a th:href="@{/admin_khuyenmai}" class="nav-link px-3">
+                                    <a href="#!admin_KhuyenMai" class="nav-link px-3">
                                         <span class="me-2"><i class="bi bi-window-sidebar"></i></span>
                                         <span th:text="#{nav.khuyenmai}">Khuyến mãi</span>
                                     </a>
@@ -262,6 +262,7 @@
     <script
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	
 	<script src="/assets/js/angular-route.js"></script>
 	<script src="/assets/js/admin-app.js"></script>
 	<script src="/assets/js/category-ctrl.js"></script>
@@ -270,6 +271,8 @@
 	<script src="/assets/js/variant-ctrl.js"></script>
 	<script src="/assets/js/color-ctrl.js"></script>
 	<script src="/assets/js/size-ctrl.js"></script>
+	<script src="/assets/js/promotion-ctrl.js"></script>
+    <script src="/assets/js/supplier-ctrl.js"></script>
 </body>
 
 </html>
