[ECLIPSE] Thêm chức năng tìm kiếm cho các form danh mục, màu

--- a/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_DanhMuc.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_DanhMuc.html
@@ -100,8 +100,8 @@
                             <form method="post">
                                 <div class="container input-group mb-3">
                                 
-                                    <input type="text" class="form-control"  name="keywords" th:value="${keywords}"  placeholder="Bạn muốn tìm gì?">
-                                    <button class="btn btn-success" th:formaction="@{/admin/admin_danhmucsanpham/timkiem}" type="submit">OK</button>
+                                    <input type="text" class="form-control"  ng-model="searchKeyword"  placeholder="Bạn muốn tìm gì?">
+                                    <button class="btn btn-success" ng-click="searchCategoryByName()" type="submit">OK</button>
                                
                                 </div>
                                 </form>
