--- a/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" th:href="@{/assets/css/admin_css.css}" />
     <link th:href="@{/assets/css/mycss.css}" rel="stylesheet" />
     <link th:href="@{/assets/font/themify-icons/themify-icons.css}" rel="stylesheet" />
+   
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>CONVERSE - ADMIN</title>
 </head>
@@ -74,7 +76,7 @@
 
                     <!-- Quản lý nhà cung cấp bắt đầu  -->
                     <li>
-                        <a th:href="@{/admin_ncc}" class="nav-link px-3">
+                        <a href="#!admin_NhaCungCap" class="nav-link px-3">
                             <span class="me-2"><i class="bi bi-book-fill"></i></span>
                             <span th:text="#{nav.qlnhacungcap}">Quản lý nhà cung cấp</span>
                         </a>
@@ -96,7 +98,7 @@
                         <div class="collapse" id="khuyenmai">
                             <ul class="navbar-nav ps-3">
                                 <li>
-                                    <a th:href="@{/admin_khuyenmai}" class="nav-link px-3">
+                                    <a href="#!admin_KhuyenMai" class="nav-link px-3">
                                         <span class="me-2"><i class="bi bi-window-sidebar"></i></span>
                                         <span th:text="#{nav.khuyenmai}">Khuyến mãi</span>
                                     </a>
@@ -259,6 +261,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.2/dist/chart.min.js"></script>
     <script
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+	
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="/assets/js/angular-route.js"></script>
 	<script src="/assets/js/admin-app.js"></script>
@@ -268,6 +271,8 @@
 	<script src="/assets/js/variant-ctrl.js"></script>
 	<script src="/assets/js/color-ctrl.js"></script>
 	<script src="/assets/js/size-ctrl.js"></script>
+	<script src="/assets/js/promotion-ctrl.js"></script>
+    <script src="/assets/js/supplier-ctrl.js"></script>
 	<script src="/assets/js/comment-ctrl.js"></script>
 </body>
 
