[ECLIPSE] Validation, tìm kiếm
- sản phẩm, sản phẩm chi tiết, màu, size, thương hiệu, danh mục

--- a/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_DanhMuc.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_DanhMuc.html
@@ -15,7 +15,45 @@
 </head>
 
 <body style="background-color: rgb(238, 238, 238);">
-    
+    <!-- Modal for displaying error messages -->
+<div class="modal fade" id="errorModal" tabindex="-1" aria-labelledby="errorModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content" style="text-align: center;">
+            <div class="modal-header" style="background-color: #FF6666; color: white;">
+                <h5 class="modal-title" id="errorModalLabel"><b>Lỗi</b></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" style="color: red">
+                <b>{{ errorMessage }}</b><br>
+                <span style="font-size: 30px"><i class="bi bi-exclamation-triangle"></i></span>
+                 <!-- Display the error message here -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" style="background: #FF6666">Đóng</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal for displaying error messages -->
+<div class="modal fade" id="errorModal1" tabindex="-1" aria-labelledby="errorModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content" style="text-align: center;">
+            <div class="modal-header" style="background-color: #00CC66; color: white;">
+                <h5 class="modal-title" id="errorModalLabel"><b>Thông báo</b></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" style="color: green;">
+                <b>{{ messageSuccess }}</b><br>
+                <span style="font-size:50px"><i class="bi bi-check"></i></span>
+                 <!-- Display the error message here -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" style="background: #00CC66">Đóng</button>
+            </div>
+        </div>
+    </div>
+</div>
 
     <!-- main content start  -->
     <main id="#main-order">
