--- a/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_NhaCungCap.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_NhaCungCap.html
@@ -145,7 +145,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr ng-repeat="item in items">
+                                    <tr ng-repeat="item in pager.items">
                                         <td>{{item.supplierID}}</td>
                                         <td>{{item.supplierName}}</td>
                                         <td>{{item.email}}</td>
@@ -164,6 +164,13 @@
                                     </tr>
                                 </tbody>
                             </table>
+                            <ul class="pagination">
+								<li class="page-item"><button ng-click="pager.first()" class="page-link">First</button></li>
+								<li class="page-item"><button ng-click="pager.prev()" class="page-link">Pre</button></li>
+								<li class="page-item"><button class="page-link">{{pager.page + 1}} of {{pager.count}}</button></li>
+								<li class="page-item"><button ng-click="pager.next()" class="page-link">Next</button></li>
+								<li class="page-item"><button ng-click="pager.last()" class="page-link">Last</button></li>
+							</ul>
                         </div>
                         <div class="card-footer text-muted">
 
