--- a/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_NhaCungCap.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_NhaCungCap.html
@@ -127,12 +127,11 @@
                             style="font-weight: bolder; font-size: larger; color: rgb(25, 31, 32);">
                             Bảng Danh Sách
                             <!-- tìm kiếm theo tên bắt đầu  -->
-								<span class="p-3">
-                            <button class="icon  fs-4" style="color: black;" data-bs-toggle="offcanvas"
-                                data-bs-target="#demo1">
-                                <i class="fa-solid fa-magnifying-glass"></i>
-                            </button>
-                        </span>
+                            <span class="p-3">
+                                <button class="search-icon icon fs-4" data-bs-toggle="offcanvas" data-bs-target="#demo1" style="border: 10px; background-color: white;">
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                </button>
+                            </span>
                         <div class="offcanvas offcanvas-bottom" id="demo1">
                             <div class="offcanvas-header">
                                 <h1 class="offcanvas-title" style="margin-left: 43%;">Tìm kiếm</h1>
@@ -142,8 +141,8 @@
                             <form method="post">
                                 <div class="container input-group mb-3">
                                 
-                                    <input type="text" class="form-control"  ng-model="searchKeyword"  placeholder="Bạn muốn tìm gì?">
-                                    <button class="btn btn-success" ng-click="searchProductByName()" type="submit">OK</button>
+                                    <input type="text" class="form-control"  ng-model="searchKeyword"  placeholder="Tìm kiếm tên, SĐT, địa chỉ nhà cung cấp?">
+                                    <button class="btn btn-success" ng-click="searchSuppliersByName()" type="submit">OK</button>
                                
                                 </div>
                                 </form>
