--- a/ConverseStore_Java6/src/main/resources/static/assets/admin/reportcates.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/admin/reportcates.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{/layout/layout_admin::dynamic(~{::body})}">
 <head>
-    <title>Category Revenue Report</title>
-    <script th:src="@{/webjars/chartjs/3.7.0/dist/chart.min.js}"></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <title>CONVERSE - Thống Kê Doanh Thu Danh Mục</title>
+    <style>
+        /* Custom CSS for the chart */
+        body {
+          font-family: Arial, sans-serif;
+        }
+        #top_x_div {
+          margin: 20px auto;
+          padding: 20px;
+          border: 1px solid #ccc;
+          background-color: #f5f5f5;
+        }
+        .google-visualization-tooltip {
+          background-color: #333;
+          color: white;
+        }
+      </style>
 </head>
-<body>
-    <canvas id="categoryRevenueChart" width="400" height="200"></canvas>
-    <script th:inline="javascript">
-        /*<![CDATA[*/
+<body style="background-color: rgb(238, 238, 238);" >
+<!-- main content start  -->
+    <main id="#main-order">
+        <div class="container-fluid">
+            <div class="row" style="background-color: white; box-shadow: 10px 10px 25px grey; ">
+                <div class="col-md-12">
+                    <h4 style="padding: 2rem 0;">Thống Kê Doanh Thu Danh Mục</h4>
+                </div>
+            </div>
 
-        // Fetch data from Spring Boot backend
-        var categories = /*[[${categories}]]*/ [];
-        var revenues = /*[[${revenues}]]*/ [];
-
-        var ctx = document.getElementById('categoryRevenueChart').getContext('2d');
-        var chart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: categories,
-                datasets: [{
-                    label: 'Category Revenue',
-                    data: revenues,
-                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    y: {
-                        beginAtZero: true
-                    }
-                }
-            }
-        });
-
-        /*]]>*/
-    </script>
+            <div class="row article " style="display: flex; justify-content: center;">
+                <div class="col-md-11 mt-5" style="background-color: white; box-shadow: 10px 10px 25px grey; padding: 0;">
+                    <div id="top_x_div" style="width: 850px; height: 500px;"></div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- main content end  -->
 </body>
 </html>
