--- a/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
@@ -196,9 +196,10 @@
                     
                     <!-- Quản lý bình luận bắt đầu  -->
                     <li>
-                        <a href="#!admin_binhluan" class="nav-link px-3">
+                        <a href="#!admin_binhluan" class="nav-link px-3" ng-click="resetNewCommentCount()">
                             <span class="me-2"><i class="bi bi-book-fill"></i></span>
                             <span th:text="#{nav.qlbinhluan}">Quản lý bình luận</span>
+                            <span class="badge bg-danger" ng-if="newCommentCount > 0">{{ newCommentCount }}</span>
                         </a>
                     </li>
 
