--- a/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
@@ -225,6 +225,12 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a href="#!admin_thongkedm" class="nav-link px-3">
+                                        <span class="me-2"><i class="bi bi-bar-chart-line"></i></span>
+                                        <span th:text="#{nav.donhang}">Thống kê doanh thu danh mục</span>
+                                    </a>
+                                </li>
+                                <li>
                                     <a th:href="@{/donhang}" class="nav-link px-3">
                                         <span class="me-2"><i class="bi bi-bag-check"></i></span>
                                         <span th:text="#{nav.donhangdagiao}">Đơn hàng đã giao</span>
@@ -307,6 +313,7 @@
     <script src="/assets/js/supplier-ctrl.js"></script>
 	<script src="/assets/js/comment-ctrl.js"></script>
     <script src="/assets/js/reportfavorite-ctrl.js"></script>
+    <script src="/assets/js/reportcates-ctrl.js"></script>
 </body>
 
 </html>
