--- a/ConverseStore_Java6/src/main/resources/static/assets/admin/reportcates.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/admin/reportcates.html
@@ -10,19 +10,38 @@
     <title>CONVERSE - Thống Kê Doanh Thu Danh Mục</title>
     <style>
         /* Custom CSS for the chart */
-        body {
-          font-family: Arial, sans-serif;
-        }
-        #top_x_div {
-          margin: 20px auto;
-          padding: 20px;
-          border: 1px solid #ccc;
-          background-color: #f5f5f5;
-        }
-        .google-visualization-tooltip {
-          background-color: #333;
-          color: white;
-        }
+/*         body { */
+/*           font-family: Arial, sans-serif; */
+/*         } */
+/*         #top_x_div { */
+/*           margin: 20px auto; */
+/*           padding: 20px; */
+/*           border: 1px solid #ccc; */
+/*           background-color: #f5f5f5; */
+/*         } */
+/*         .google-visualization-tooltip { */
+/*           background-color: #333; */
+/*           color: white; */
+/*         } */
+		#top_x_div {
+    width: 100%;
+    height: 600px;
+    margin: 0 auto;
+}
+		.google-visualization-bar {
+    fill: #3498db; /* Màu xanh dương */
+}
+		.google-visualization-tooltip {
+    background-color: #333;
+    color: white;
+}
+.google-visualization-tooltip-item-list {
+    color: white;
+}
+		body {
+    font-family: "Arial", sans-serif;
+}
+		
       </style>
 </head>
 <body style="background-color: rgb(238, 238, 238);" >
