[ECLIPSE] Phân trang cho trang sản phẩm
- Thêm chức năng phân trang cho trang sản phẩm
- Cập nhật tÌm kiếm sản phẩm, lọc theo giá, loại,  danh mục, thương hiệu
- Chỉnh sửa giao diện trang chủ hiển thị 4 sp giảm giá
- Điều chỉnh kích thước của thương hiệu
- Admin ql sản phẩm: ngày thêm sp chỉ hiển thị không cho sửa

--- a/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_SanPham.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_SanPham.html
@@ -130,7 +130,7 @@
                                         
                                         <div class="mb-3 col-md-12">
                                         <label for="ngaytao" class="form-label fs-17">Ngày tạo:</label>
-                                        <input ng-model="form.createDate" type="date" class="form-control" id="ngaytao" placeholder="">
+                                        <input ng-model="form.createDate" type="date" class="form-control" id="ngaytao" readonly="true">
                                     	</div>
                                         
                                         <label class="form-label fs-17">Trạng thái:</label> <br>
