--- a/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
@@ -12,7 +12,6 @@
     <link th:href="@{/assets/css/mycss.css}" rel="stylesheet" />
     <link th:href="@{/assets/font/themify-icons/themify-icons.css}" rel="stylesheet" />
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>CONVERSE - ADMIN</title>
 </head>
@@ -64,7 +63,7 @@
                         <div class="collapse" id="nguoidung">
                             <ul class="navbar-nav ps-3">
                                 <li>
-                                    <a href="#" class="nav-link px-3">
+                                    <a href="#!admin_nguoidung" class="nav-link px-3">
                                         <span class="me-2"><i class="bi bi-person-circle"></i></span>
                                         <span th:text="#{nav.nguoidung}">Người dùng</span>
                                     </a>
@@ -314,6 +313,7 @@
 	<script src="/assets/js/comment-ctrl.js"></script>
     <script src="/assets/js/reportfavorite-ctrl.js"></script>
     <script src="/assets/js/reportcates-ctrl.js"></script>
+    <script src="/assets/js/user-ctrl.js"></script>
 </body>
 
 </html>
