[JAVA - JS - HTML] - Employee Manegement , Show profile

--- a/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
@@ -70,6 +70,16 @@
                                 </li>
                             </ul>
                         </div>
+                        <div class="collapse" id="nguoidung">
+                            <ul class="navbar-nav ps-3">
+                                <li>
+                                    <a href="#!admin_employee" class="nav-link px-3">
+                                        <span class="me-2"><i class="bi bi-person-circle"></i></span>
+                                        <span >Admin</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <!-- Quản lý người dùng kết thúc  -->
 
@@ -253,7 +263,7 @@
                     <li>
                         <a class="nav-link px-3 sidebar-link" data-bs-toggle="collapse" href="#taikhoan">
                             <span class="me-2"><i class="bi bi-bag-fill"></i></span>
-                            <span>Xin chào Quang Minh</span>
+                            <span>Cá nhân</span>
                             <span class="ms-auto">
                                 <span class="right-icon">
                                     <i class="bi bi-chevron-down"></i>
@@ -314,6 +324,8 @@
     <script src="/assets/js/reportfavorite-ctrl.js"></script>
     <script src="/assets/js/reportcates-ctrl.js"></script>
     <script src="/assets/js/user-ctrl.js"></script>
+    <script src="/assets/js/employee-ctrl.js"></script>
+    
 </body>
 
 </html>
