--- a/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/layout_admin.html
@@ -177,17 +177,12 @@
                         <div class="collapse" id="donhang">
                             <ul class="navbar-nav ps-3">
                                 <li>
-                                    <a th:href="@{/donhang}" class="nav-link px-3">
+                                    <a href="#!admin_donhang" class="nav-link px-3">
                                         <span class="me-2"><i class="bi bi-bag"></i></span>
                                         <span th:text="#{nav.donhang}">Đơn hàng</span>
                                     </a>
                                 </li>
-                                <li>
-                                    <a th:href="@{/donhang}" class="nav-link px-3">
-                                        <span class="me-2"><i class="bi bi-bag-check"></i></span>
-                                        <span th:text="#{nav.donhangdagiao}">Đơn hàng đã giao</span>
-                                    </a>
-                                </li>
+                                
                             </ul>
                         </div>
                     </li>
@@ -314,6 +309,7 @@
 	<script src="/assets/js/comment-ctrl.js"></script>
     <script src="/assets/js/reportfavorite-ctrl.js"></script>
     <script src="/assets/js/reportcates-ctrl.js"></script>
+    <script src="/assets/js/adminorder.js"></script>
 </body>
 
 </html>
