--- a/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_NhaCungCap.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_NhaCungCap.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
     <title>CONVERSE - Thông tin cá nhân</title>
 </head>
 <body style="background-color: rgb(238, 238, 238);" >
@@ -179,13 +176,8 @@
                                         <td>{{item.addresss}}</td>
                                         <td>{{item.statuss? 'Hoạt Động':'Không Hoạt Động'}}</td>
                                         <td>
-                                			<a type="button"
-												class="btn btn-success" ng-click="edit(item)">
-												<i class="bi bi-card-list"></i> Sửa
-											</a>
-											<a type="button" class="btn btn-danger"  ng-click="delete(item)">
-												<i class="bi bi-trash"></i> Xóa
-											</a>
+                                			<button ng-click="edit(item)" type="button" class="btn btn-warning">Chọn</button>
+                                            <button ng-click="delete(item)" type="button" class="btn btn-danger">Xóa</button>
 										</td>
                                     </tr>
                                 </tbody>
