--- a/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_BinhLuan.html
+++ b/ConverseStore_Java6/src/main/resources/static/assets/admin/admin_BinhLuan.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{/layout/layout_admin::dynamic(~{::body})}">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{/layout/layout_admin::dynamic(~{::body})}" >
 
 <head>
     <meta charset="UTF-8" />
@@ -35,13 +35,13 @@
                                     </div>
                                     <div class="mb-3 col-md-4">
                                         <label for="tensanpham" class="form-label fs-17">Tên sản phẩm:</label>
-                                        <select ng-model="form.products.productID" class="form-select">
+                                        <select ng-model="form.products.productID" class="form-select" disabled>
                                         	<option ng-repeat="p in products" ng-value="p.productID">{{p.productName}}</option>
                                         </select>
                                     </div>
                                     <div class="mb-3 col-md-4">
                                         <label for="tenkhachhang" class="form-label fs-17">Tên khách hàng:</label>
-                                        <select ng-model="form.customers.customerId" class="form-select">
+                                        <select ng-model="form.customers.customerId" class="form-select" disabled>
                                         	<option ng-repeat="cus in customers" ng-value="cus.customerId">{{cus.customerName}}</option>
                                         </select>
                                     </div>
@@ -51,7 +51,7 @@
                                     </div>
                                     <div class="mb-3 col-md-4">
                                         <label for="ngaybl" class="form-label fs-17">Ngày bình luận:</label>
-                                        <input type="date" ng-model="form.createDate" class="form-control" id="ngaybl">
+                                        <input type="date" ng-model="form.createDate" class="form-control" id="ngaybl" readonly="true">
                                     </div>
                                     <div class="row col-md-4">
                                         <div class="mb-3 col-md-4">
@@ -64,7 +64,7 @@
                                     </div>
                                     <div class="mb-3 col-md-4">
                                         <label for="nv" class="form-label fs-17">Nhân viên:</label>
-                                        <select ng-model="form.employees.employeeId" class="form-select">
+                                        <select ng-model="form.currentEmployeeId" class="form-select">
                                         	<option ng-repeat="e in employees" ng-value="e.employeeId">{{e.employeeName}}</option>
                                         </select>
                                     </div>
@@ -85,7 +85,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button ng-click="create()" type="button" class="btn btn-primary"><i class="bi bi-save2"></i> Thêm</button>
+<!--                                 <button ng-click="create()" type="button" class="btn btn-primary"><i class="bi bi-save2"></i> Thêm</button> -->
                                 <button ng-click="update()" type="button" class="btn btn-success"><i class="bi bi-card-list"></i> Sửa</button>
                                 <button ng-click="delete(form)" type="button" class="btn btn-danger"><i class="bi bi-trash"></i> Xóa</button>
                                 <button ng-click="reset()" type="button" class="btn btn-info"><i class="bi bi-arrow-clockwise"></i> Làm mới</button>
